# windows-record

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md  audio_mixer_old.rs
examples/: basic_recording.rs  replay_buffer.rs  select_audio_device.rs  select_encoder.rs  select_video_encoder.rs
src/: error.rs  lib.rs  logger.rs  main.rs  mainold.rs
src/capture/: audio.rs  dxgi.rs  microphone.rs  mod.rs  monitor.rs  video.rs  window.rs
src/device/: audio.rs  encoder.rs  mod.rs  video.rs
src/processing/: audio.rs  audio_mixer.rs  encoder.rs  media.rs  mod.rs  video.rs
src/recorder/: config.rs  inner.rs  mod.rs  utils.rs
src/types/: mod.rs  safe_wrapper.rs  texture_pool.rs
