[package]
name = "win-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "^0.4.21"
spin_sleep = "1.2.0"
thiserror = "1.0"


[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Audio",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Foundation_Numerics",
    "Media_MediaProperties",
    "Win32_Storage_Xps",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Performance",
    "Win32_Devices",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "implement"
]


[profile.release]
debug = true
