[package]
name = "windows-record"
version = "0.1.0"
edition = "2021"
description = "A library for recording screen and audio on Windows systems"
authors = ["judehek"]
license = "MIT"
repository = "https://github.com/judehek/windows-record"
readme = "README.md"
keywords = ["windows", "recording", "screen capture", "audio", "video"]
categories = ["multimedia", "multimedia::audio", "multimedia::video", "api-bindings"]

[dependencies]
env_logger = "0.11.6"
log = "^0.4.21"
spin_sleep = "1.2.0"
thiserror = "1.0"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Audio",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Performance",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "implement"
]


[profile.release]
debug = true
